--- a/.github/workflows/build-apworld.yml
+++ b/.github/workflows/build-apworld.yml
@@ -90,19 +90,116 @@ jobs:
           if (Test-Path $apworldPath) { Remove-Item $apworldPath -Force }
 
           Write-Host "📦 Creating zip from: $worldFolder"
-          Compress-Archive -Path $worldFolder -DestinationPath $zipPath -Force
+          if (-Not (Test-Path $worldFolder)) {
+            Write-Host "❌ World folder not found: $worldFolder"
+            Exit 1
+          }
 
+          Compress-Archive -Path $worldFolder -DestinationPath $zipPath -Force
           Write-Host "🔄 Renaming rac3.zip → rac3.apworld..."
           Rename-Item -Path $zipPath -NewName "rac3.apworld"
 
           Write-Host "✅ Done! Output: $apworldPath"
 
+      - name: 🏗️ Set up Python
+        if: steps.changes.outputs.should_build == 'true'
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: 📦 Install dependencies
+        if: steps.changes.outputs.should_build == 'true'
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          # Install extra dependencies
+          pip install factorio-rcon-py>=2.1.2 nest-asyncio>=1.5.5 pyinstaller pillow requests zstandard pyevermizer dolphin-memory-engine Pymem>=1.13.0 --disable-pip-version-check
+
+      - name: 🧪 Run Archipelago generation and edit YAML
+        if: steps.changes.outputs.should_build == 'true'
+        shell: pwsh
+        env:
+          AP_NO_UPDATE: "1"
+          SKIP_REQUIREMENTS_UPDATE: "1"
+        run: |
+          $ErrorActionPreference = "Stop"
+          $rootDir = "${{ github.workspace }}"
+          Set-Location $rootDir
+          Write-Host "🧪 Generating template options..."
+          python Launcher.py "Generate Template Options" || true
+
+          Write-Host "📂 Checking Players/Templates folder..."
+          Get-ChildItem -Recurse Players/Templates | Write-Host
+
+          # Ensure Players folder exists
+          if (-Not (Test-Path Players)) { New-Item -ItemType Directory -Path Players }
+          # Copy the RaC3 template YAML
+          $yamlSource = Join-Path $rootDir 'Players/Templates/Ratchet & Clank 3.yaml'
+          $yamlDest   = Join-Path $rootDir 'Players/Ratchet & Clank 3.yaml'
+          $yamlRoot   = Join-Path $rootDir RaC3.yaml
+          if (-Not (Test-Path $yamlSource)) { Write-Error "Template YAML not found: $yamlSource" }
+          Copy-Item -LiteralPath $yamlSource -Destination $yamlDest -Force
+          
+          # Read YAML
+          $yamlContent = Get-Content -LiteralPath $yamlDest -Raw
+          
+          # Update version
+          $yamlContent = $yamlContent -replace 'version:\s*0\.6\.4', 'version: 0.6.3'
+          
+          # Update exclude_locations depending on branch
+          $branch = "${{ steps.branch.outputs.branch }}"
+          if ($branch -eq "staging") {
+              $excludeReplacement = @"
+            exclude_locations:
+              # Prevent these locations from having an important item.
+              Unstable: 1
+              Weapons: 1
+              Gadgets: 1
+          "@
+          } else {
+              $excludeReplacement = @"
+            exclude_locations:
+              # Prevent these locations from having an important item.
+              Unstable: 1
+          "@
+          }
+          # Replace the original block
+          $yamlContent = $yamlContent -replace '(?ms)^\s*exclude_locations:\s*\n\s*# Prevent these locations[^\n]*\n\s*\[\]', $excludeReplacement
+          
+          # Update plando_items with exact 2-space indentation
+          $plandoReplacement = @"
+            plando_items:
+              # Generic items plando.
+              - items:
+                  Progressive RY3N0: 5
+                locations:
+                  - 'Phoenix: Long Term Trophy: Titanium Collector'
+                  - 'Phoenix: Long Term Trophy: Friend of the Rangers'
+                  - 'Phoenix: Long Term Trophy: Annihilation Nation Champion'
+                  - 'Command Center: Dr. Nefarious Defeated!'
+                  - 'Annihilation: Qwarktastic Battle'
+          "@
+          $yamlContent = $yamlContent -replace '(?ms)^\s*plando_items:\s*\n\s*# Generic items plando\.\s*\[\]', $plandoReplacement
+          
+          # Write YAML back
+          Set-Content -LiteralPath $yamlDest -Value $yamlContent -Force
+          Copy-Item -LiteralPath $yamlDest -Destination $yamlRoot -Force
+          Write-Host "✅ YAML edited successfully."
+
+          # Continue with generation test
+          Write-Host "🧪 Testing seed generation..."
+          python Generate.py || true
+
+          Write-Host "✅ Test step completed — continuing with release."
+
       - name: Upload build artifact
         if: steps.changes.outputs.should_build == 'true'
         uses: actions/upload-artifact@v4
         with:
-          name: rac3.apworld
-          path: ./rac3.apworld
+          name: apworld-and-template
+          path: |
+            rac3.apworld
+            RaC3.yaml
 
   release:
     needs: build
@@ -119,8 +216,21 @@ jobs:
       - name: Download built artifact
         uses: actions/download-artifact@v4
         with:
-          name: rac3.apworld
+          name: apworld-and-template
           path: .
+
+      - name: Prepare YAML for GitHub Release
+        run: |
+          # Check the file exists
+          if [ ! -f RaC3.yaml ]; then
+            echo "❌ YAML file missing!"
+            ls -la
+            exit 1
+          fi
+
+          # Rename to original filename before uploading
+          # mv RaC3.yaml "Ratchet & Clank 3.yaml"
+          # echo "✅ Renamed back to: Ratchet & Clank 3.yaml"
 
       - name: Determine next semantic version
         id: semver
@@ -241,7 +351,9 @@ jobs:
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          files: rac3.apworld
+          files: |
+            rac3.apworld
+            Ratchet & Clank 3.yaml
           tag_name: v${{ steps.semver.outputs.version }}
           name: "RaC3 APWorld v${{ steps.semver.outputs.version }}"
           body_path: release_notes.md
