--- a/.github/workflows/build-apworld.yml
+++ b/.github/workflows/build-apworld.yml
@@ -295,9 +295,11 @@ jobs:
 
           # Find the most recent relevant tag depending on branch type
           if [[ "$branch" == "main" ]]; then
+            # For main: compare to latest *non-pre* tag
             prev_tag=$(git tag --sort=-v:refname | grep -v -- '-pre' | head -n 1 || true)
           else
-            prev_tag=$(git tag --sort=-v:refname | grep -- '-pre' | head -n 1 || true)
+            # For staging: compare to latest tag of ANY kind (pre or stable)
+            prev_tag=$(git tag --sort=-v:refname | head -n 1 || true)
           fi
           
           # Fallback: if none found, show full commit history
